Agent: Use G1 garbage collector
Without the G1 GC, we're susceptible to 20+ second pauses, namely in
topologies that generate a large amount of flow state.

With G1, we trade large pauses for more frequent small pauses. Given
the current state of affairs, this is much preferred.

Ref MNA-623

Change-Id: I17d94134757fbb6c9e89cec74bbd2d66dbfed0a0
Signed-off-by: Duarte Nunes <duarte@midokura.com>